--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ section {
   cursor: pointer;
 }
 
-.portfolio-content {
+.project-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
